# gemini-fullstack-langgraph-quickstart

backend/: .env.example  pyproject.toml  test.ipynb
backend/src/agent/: configuration.py  graph.py  opensearch.py  test_opensearch.py  utils_new.py
frontend/src/: App.tsx
