[project]
name = "agent"
version = "0.0.1"
description = "Backend for the LangGraph agent"
authors = [
    {name = "Philipp Schmid"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langgraph-sdk (>=0.1.70,<0.2.0)",
    "langgraph-cli (>=0.2.12,<0.3.0)",
    "langgraph-api (>=0.2.46,<0.3.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "google-genai (>=1.19.0,<2.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain-openai (>=0.3.21,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
langgraph-cli = {version = ">=0.1.71", extras = ["inmem"]}

